--- a/machine.html
+++ b/machine.html
@@ -71,7 +71,7 @@
 <p><span class="badge badge-light">London  London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/plusai/jobs/4033038002?gh_src=685415c52'>Job Application for Machine Learning Scientist at PlusAI</a></h5> 
+<h5><a href='https://boards.greenhouse.io/plusai/jobs/4033038002?gh_src=685415c52'>Job Application for Machine Learning Scientist at PlusAI</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -95,7 +95,7 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://careercyresconsulting.recruitee.com/o/praktikantwerkstudent-data-sciencemachine-learning-wmd'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careercyresconsulting.recruitee.com/o/praktikantwerkstudent-data-sciencemachine-learning-wmd'>
       Praktikant/Werkstudent Data Science/Machine Learning (w/m/d) - CYRES Consulting Services GmbH
     </a></h5> 
 <p><span class="badge badge-light">M?nchen</span></p>
@@ -141,7 +141,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=o9uCafw9&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=nFkQoMwu'>Align Technology Careers - Software Development Engineer in Test (Python) - Machine Learning</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=o9uCafw9&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=nFkQoMwu'>Align Technology Careers - Software Development Engineer in Test (Python) - Machine Learning</a></h5> 
 <p><span class="badge badge-light">Raleigh , North Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -247,7 +247,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1933414'>Job Application for Senior Machine Learning Engineer at Sony Interactive Entertainment PlayStation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1933414'>Job Application for Senior Machine Learning Engineer at Sony Interactive Entertainment PlayStation</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -303,7 +303,7 @@ Engineer to join the Cityblock Prototype Engineering team. You will work with?..
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4479095002'>Job Application for Machine Learning Researcher at Samsung Research America</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4479095002'>Job Application for Machine Learning Researcher at Samsung Research America</a></h5> 
 <p><span class="badge badge-light">Campbell Campbell</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -339,7 +339,7 @@ healthcare?...</p>
 <p><span class="badge badge-light">Boston, MA  Boston</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=ollkbfwV&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=nLy3iMwV'>Align Technology Careers - Machine Learning Research Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=ollkbfwV&__jvst=Employee+Referral&__jvsd=sxe4Bgwb&__jvsc=Twitter&bid=nLy3iMwV'>Align Technology Careers - Machine Learning Research Scientist</a></h5> 
 <p><span class="badge badge-light">Raleigh , North Carolina</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -408,7 +408,7 @@ optimize deep learning models for efficient inference. These optimizations are?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<h5><a href='https://www.apple.com/jobs/us/teams/machine-learning-and-ai.html'>Machine Learning and AI - Jobs at Apple</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.apple.com/jobs/us/teams/machine-learning-and-ai.html'>Machine Learning and AI - Jobs at Apple</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -439,7 +439,7 @@ ML;?...</p>
 <p>Oct 11, 2019 ... Machine Learning Engineer. Seattle, WA. Engineering ? Machine Learning. Full-
 time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697823053-machine-learning-engineer-yogyakarta-indonesia-'>A Job Thing Machine Learning Engineer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697823053-machine-learning-engineer-yogyakarta-indonesia-'>A Job Thing Machine Learning Engineer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indonesia Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -447,7 +447,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://brainlab.softgarden.io/job/5179652/Senior-Developer-Machine-Learning-Artificial-Intelligence?jobDbPVId=14186572&amp;l=en'>Senior Developer - Machine Learning / Artificial Intelligence</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://brainlab.softgarden.io/job/5179652/Senior-Developer-Machine-Learning-Artificial-Intelligence?jobDbPVId=14186572&amp;l=en'>Senior Developer - Machine Learning / Artificial Intelligence</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -457,7 +457,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Mobica/743999697536835-machine-learning-engineer'>Mobica  Machine Learning Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Mobica/743999697536835-machine-learning-engineer'>Mobica  Machine Learning Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -469,7 +469,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1843542'>Job Application for Machine Learning Intern at Sony Interactive Entertainment PlayStation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1843542'>Job Application for Machine Learning Intern at Sony Interactive Entertainment PlayStation</a></h5> 
 <p><span class="badge badge-light">Santa Monica</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -477,7 +477,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697742728-abschlussarbeit-automatisiertes-machine-learning'>Bosch Group Abschlussarbeit Automatisiertes Machine Learning | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697742728-abschlussarbeit-automatisiertes-machine-learning'>Bosch Group Abschlussarbeit Automatisiertes Machine Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
