--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/innerworkings/job/olz7afwV'>InnerWorkings Careers - Senior Agile Product Owner</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/artsy/jobs/1944747'>Job Application for Senior Product Manager at Artsy</a></h5> 
+<p><span class="badge badge-light">New York, NY</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/carvana/jobs/1940304'>Job Application for Product Manager, Title and Registration at Carvana</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
@@ -50,13 +58,13 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://elsewhen.recruitee.com/o/senior-product-manager'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://elsewhen.recruitee.com/o/senior-product-manager'>
       Senior Product Manager - Elsewhen
     </a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://elsewhen.recruitee.com/o/contract-senior-product-manager-london'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://elsewhen.recruitee.com/o/contract-senior-product-manager-london'>
       Contract Senior Product Manager - Elsewhen
     </a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
@@ -84,7 +92,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vpTech/a8bfca33-f3e1-428c-a998-1721f8c718ab'>vpTech - Product owner - Service manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/a8bfca33-f3e1-428c-a998-1721f8c718ab'>vpTech - Product owner - Service manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -182,11 +190,11 @@
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nwea/job/ojVrbfwA'>NWEA Careers - Senior Product Manager, Early Learning</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nwea/job/ojVrbfwA'>NWEA Careers - Senior Product Manager, Early Learning</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qFIaVfwc&k=Job&j=oXSD9fwl&__jvst=Employee+Referral&__jvsd=soyKShwk&__jvsc=Twitter&bid=nCnrqMw7'>RevUnit Careers - RevUnit Future Positions - Product Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qFIaVfwc&k=Job&j=oXSD9fwl&__jvst=Employee+Referral&__jvsd=soyKShwk&__jvsc=Twitter&bid=nCnrqMw7'>RevUnit Careers - RevUnit Future Positions - Product Designer</a></h5> 
 <p><span class="badge badge-light">Las Vegas, Nevada  Austin, Texas  United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -210,7 +218,7 @@
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=ouNPafw0&__jvst=Employee+Referral&__jvsd=s2yligwY&__jvsc=Twitter&bid=nzvnqMw8'>Jobvite, Inc. Careers - Senior AI Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=ouNPafw0&__jvst=Employee+Referral&__jvsd=s2yligwY&__jvsc=Twitter&bid=nzvnqMw8'>Jobvite, Inc. Careers - Senior AI Product Manager</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -226,7 +234,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/kjssi3eih7jhcc9fppb4zacapa'>Product Manager | Opportunity Portal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/kjssi3eih7jhcc9fppb4zacapa'>Product Manager | Opportunity Portal</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -234,7 +242,7 @@
 <p><span class="badge badge-light">Seattle, WA  San Francisco Palo Alto Seattle New York City</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/connectedfitness/jobs/1939963'>Job Application for Product Designer at Under Armour </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/connectedfitness/jobs/1939963'>Job Application for Product Designer at Under Armour </a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -246,7 +254,7 @@
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4348968002'>Job Application for Principal Product Manager (OSP Now) at Ocado Group</a></h5> 
+<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4348968002'>Job Application for Principal Product Manager (OSP Now) at Ocado Group</a></h5> 
 <p><span class="badge badge-light">Wroclaw</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -266,7 +274,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/coupang/jobs/1829366'>Job Application for Principal, Product Owner (FinTech Business & Systems) at Coupang</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1829366'>Job Application for Principal, Product Owner (FinTech Business & Systems) at Coupang</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -290,7 +298,7 @@
 <p><span class="badge badge-light">Sunnyvale California Kitchener-Waterloo Canada  Sunnyvale California Kitchener-Waterloo Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4491874002'>Job Application for Technical Product Manager, SOC Platform at Arctic Wolf Networks</a></h5> 
+<h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4491874002'>Job Application for Technical Product Manager, SOC Platform at Arctic Wolf Networks</a></h5> 
 <p><span class="badge badge-light">Waterloo Ontario, Canada Utah, United States Sunnyvale United States  Kitchener-Waterloo Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -306,7 +314,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/buoyhealth/aee37e0b-11be-41f8-94b6-c29c51b7a4c6'>Buoy Health - Product Owner</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/buoyhealth/aee37e0b-11be-41f8-94b6-c29c51b7a4c6'>Buoy Health - Product Owner</a></h5> 
 <p><span class="badge badge-light">New York, NY  Boston</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -362,11 +370,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/uniteus/jobs/4325874002'>Job Application for Product Manager (EMR/EHR) at Unite Us</a></h5> 
+<h5><a href='https://boards.greenhouse.io/uniteus/jobs/4325874002'>Job Application for Product Manager (EMR/EHR) at Unite Us</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vizrt.applytojob.com/apply/dEdGNsUPpl/Product-Manager-Pro-AV-NewTek'>Product Manager, Pro A/V (NewTek) - Vizrt - Career Page</a></h5> 
+<h5><a href='http://vizrt.applytojob.com/apply/dEdGNsUPpl/Product-Manager-Pro-AV-NewTek'>Product Manager, Pro A/V (NewTek) - Vizrt - Career Page</a></h5> 
 <p><span class="badge badge-light">San Antonio, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -402,7 +410,7 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/americaatwork/2bb511c7-d0f7-4ad4-99a8-ee4f443c83d4'>America At Work - Product Manager (copy)</a></h5> 
+<h5><a href='https://jobs.lever.co/americaatwork/2bb511c7-d0f7-4ad4-99a8-ee4f443c83d4'>America At Work - Product Manager (copy)</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -430,11 +438,11 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=o9Tsbfwp&__jvst=Tenable+Employee&__jvsd=syUaHfw3&__jvsc=Twitter&bid=nFFXpMwX'>Tenable Careers - Senior Product Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=o9Tsbfwp&__jvst=Tenable+Employee&__jvsd=syUaHfw3&__jvsc=Twitter&bid=nFFXpMwX'>Tenable Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/tenable-network-security/job/o9Tsbfwp'>Tenable Careers - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tenable-network-security/job/o9Tsbfwp'>Tenable Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -448,14 +456,6 @@
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698605057-digital-product-manager'>Biogen Digital Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Oslo, Norway</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://faveo.join.com/jobs/447026-product-manager-product-owner-m-w-d'>Job @ faveo (Essen): Product Manager / Product Own... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ondeck/jobs/1931112'>Job Application for Product Designer, ODX at OnDeck</a></h5> 
-<p><span class="badge badge-light">New York, NYArlington, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
